# AutoAI-MusicalPlayVideoChapters

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  REFACTOR_PLAN.md  convert.py  convert_lyrics.py  convert_story.py  convert_story.v2.py  pyproject.toml
.github/: commit-message.md  copilot-instructions.md
src/autoai_musical_play_video_chapters/: __init__.py  __main__.py  audio.py  cli.py  config.py  io_flyer.py  io_srt.py
src/autoai_musical_play_video_chapters/llm/: client.py  repair.py  schemas.py
src/autoai_musical_play_video_chapters/pipeline/: __init__.py  detect.py  extract.py  reporting.py
